# autolog-triage

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: STUDY.md  THESIS.md
sample/data/labels/: sample_run.labels.json
sample/reports/: sample_run.report.html  sample_run.report.json  sample_run.report.md
scripts/: push_to_github.sh
src/autolog_triage/: __init__.py  api.py  cli.py  models.py
src/autolog_triage/agents/: llm.py  orchestrator.py
src/autolog_triage/data/: parser.py  synthetic.py
src/autolog_triage/detection/: detectors.py
src/autolog_triage/evaluation/: experiment.py  metrics.py
src/autolog_triage/reporting/: render.py
tests/: test_pipeline.py
